 + New atlas format: CacheBox
 + New atlas format: Garmin Custom Map
     Image downscaling uses bilinear filter (improves image quality) 
 + Each map source has now a background color (usually black) that is used 
    in case of missing tiles
 + Content-type check after download (HTTP header and image data header)
 ~ OpenStreetMap Hiking Relief URL updated
 + New map source: Ovi/Nokia Maps
 
 1.6.1: (2009-10-30)
 ! Loading and saving of GPX failed
 
 1.6: (2009-10-27)
 + Loading & saving of GPX 1.1 files (way- track- and routepoints are displayed
    as overlay) 
 + GPX 1.0 files are automatically transformed to GPX 1.1 file on load 
 + Route and tracks are painted as connected line   
 + Add new way points to a GPX file (properties: lat, lon, name)   
 + Map scale bar added (metric/imperial selectable)
 + New atlas format: Mobile Trail Explorer (MTE)
 + New atlas format: RMaps / BigPlanet SQLite (Android applications, requires 
    additional SQLite libraries) 
 + New atlas format: OSMTracker 
 + New map source: OpenStreetMap Public Transport (öpnvkarte.de)
 + New map source: AustrianMap (z14 & z15 of www.austrianmap.at) 
    [provided by Guenther Hoelzl]
 + New map sources: Freemap Slovakia (normal, hiking & hiking plus hill shade)
 + New map sources: Google Maps Korea
 + New map sources: Open Piste Map (openpistemap.org)
 + New atlas format: Maverick (Android application)
 + New map sources: Emapa.pl (Poland)
 + New atlas format: Glopus (PNG & KAL)
 + New map sources: Outdooractive.com Austria and South Tyrol

 ~ Max zoom level of Google Maps increased from 17 to 19
 ~ Behavior on adding new maps and layers changed: the number of layers has 
    been reduced to a minimum making it easier switch between different zoom 
    levels when using TrekBuddy

 ! Extreme performance break-in in grid-mode fixed
 ! Map selections do no longer unwanted enlarge itself in grid mode beyond the 
    selected grid
 
 1.5: (2009-08-01)